Prevent layout shift by forcing vertical scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,9 @@
   --max-w: 1400px;
 }
 
-html,
+html {
+  overflow-y: scroll;
+}
 body,
 #root {
   margin: 0;
